syntax = "proto3";

package com.road.yishi.proto.quest;

message QuestAddedMsg {
  repeated int32 questId = 1;
}
